# bevyjam4

./: .gitattributes  Cargo.toml  README.md
assets/levels/: 01_cells.level  02_connect.level  03_loadbay.level  04_storage.level  05_process.level  06_tunnels.level  07_engine.level  08_security.level  ground_zero.level  load_bay.level  two.level
assets/models/: barrel_blue.gltf  barrel_red.gltf  belt.glb  belt1.glb  belt2.glb  belt3.glb  belt4.glb  brain.glb  cannon.glb  cell_bars.glb  cell_bed.glb  cell_melted.glb  chute.glb  closed_pipe.glb  elevator_enter.glb  elevator_exit.glb  engine.glb  floor.glb  floor.gltf  floor_hatch.glb  floor_metals.glb  green_pipe.glb  jimbo.glb  jimbo.gltf  jimbo1.gltf  load_crane.glb  scorchmark.glb  star.glb  terrain.gltf  tripod.gltf  void_lta.glb  void_ltb.glb  void_squ.glb  void_tri.glb  wall.glb  wall.gltf  wall_charred1.glb  wall_charred2.glb  wall_compscreen.glb  wall_computer.glb  (+4 more)
project/: DESIGN.txt  TODO.txt  build_linux.sh  build_mingw.sh  build_wasm.sh  deploy_all.sh  web-audio-autoplay.js
src/: main.rs  tmp.rs
src/app/: actions.rs  assets.rs  mod.rs  scheduling.rs  scores.rs  screenshot.rs  settings.rs
src/gameplay/: balance.rs  mod.rs  physics.rs  utils.rs
src/gameplay/master/: game_script.rs  game_states.rs  level_progress.rs  mod.rs  script_points.rs  time_master.rs
src/gameplay/master/level/: current.rs  data.rs  database.rs  mod.rs  spawn.rs
src/gameplay/mechanics/: ai.rs  damage.rs  mod.rs  movement.rs  overload.rs
src/gameplay/objects/: barrels.rs  conveyor.rs  elevators.rs  enemy.rs  mod.rs  particles.rs  player.rs  terrain.rs
src/presentation/: advanced_gizmos.rs  mod.rs
src/presentation/menu/: debug.rs  game.rs  hud.rs  in_game.rs  inoutro.rs  level_editor.rs  levels.rs  loading.rs  log.rs  main.rs  messages.rs  mod.rs  settings.rs  startup.rs  states.rs  ui_const.rs
src/presentation/objects/: animation_ctl.rs  assets.rs  barrels.rs  conveyor.rs  elevators.rs  enemy.rs  materials.rs  mod.rs  other_objects.rs  particles.rs  player.rs  sprite.rs  starfield.rs  terrain.rs  utils.rs
src/utils/: bevy_egui.rs  math_algorithms.rs  misc_utils.rs  mod.rs  random.rs
src/utils/bevy/: commands.rs  misc_utils.rs  mod.rs
src/utils/for_crate/: bevy_ecs.rs  bevy_egui.rs  bevy_misc.rs  mod.rs  std.rs
src/utils/plugins/: load_assets.rs  log_plugin.rs  mod.rs  ron_asset.rs  userdata_plugin.rs
