[package]
name = "bevyjam4"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev_build"]
dev_build = [
    # faster recompilation, but should be disabled for release builds (and WASM)
    "bevy/dynamic_linking",
    "bevy_rapier2d/debug-render-2d",
]

[dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "animation",
    "bevy_gltf",
    
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    #"multi-threaded",  # there is only one thread in WASM anyway, and that's our target platform
    "png",
    "x11",

    "bevy_audio",
    "vorbis",

    # avoid compilation errors with web-sys; also should increase compatibility
    "webgl2",

    # needed for tonemapping
    "tonemapping_luts", "ktx2", "zstd",
]}
bevy_egui = { version = "0.23", default-features = false, features = ["default_fonts"] }
bevy_rapier2d = { version = "0.23" }
leafwing-input-manager = { version = "=0.11.1", default-features = false, features = ["egui"] }

itertools = "0.11"
rand = "0.8"

# for userdata
ron = "0.8"
serde = { version = "1", features = ["derive"] }

# for logging: same versions as used by bevy (to decrease number of dependencies)
crossbeam-channel = "0.5"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

# for assets
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# for logging: same versions as used by bevy (to decrease number of dependencies)
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
# for userdata
wasm-cookies = "0.2"

# Optimize this crate a bit in debug mode
[profile.dev]
opt-level = 1

# Fully optimize dependencies in debug mode
[profile.dev.package."*"]
opt-level = 3
